--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.0"
 services:
-  boilerplate:
+  fields-renamer:
     build:
       context: ../
       dockerfile: docker/Dockerfile
     environment:
-      MODULE_NAME: "boilerplate"
+      MODULE_NAME: "fields-renamer"
       MODULE_TYPE: "Processing"
       INGRESS_HOST: "0.0.0.0"
       INGRESS_PORT: "80"
       EGRESS_URLS: "https://testdockercompose.free.beeceptor.com"
+      RENAME_FIELDS: "temperature=temp, rotations-per-minute=rpm"
     ports:
       - 80:80
