--- a/test/test.env
+++ b/test/test.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=boilerplate
+MODULE_NAME=fields-renamer
 MODULE_TYPE=Processing
 
 # REQUIRED API SETTINGS
@@ -11,3 +11,5 @@ INGRESS_PORT=80
 EGRESS_URLS=http://listener1:9000,http://listener2:9001
 
 # YOU CAN ADD REMAINING MODULE SETTINGS BELOW
+
+RENAME_FIELDS=name=employee,email=email-address
