--- a/Module.yaml
+++ b/Module.yaml
@@ -30,4 +30,4 @@ tags:                                   # Array of tags.
   - 'Processing'
   - 'Fields-Renamer'
   - 'Rename'
-icon: 'https://some.url/to/icon.png'    # Icon URL that will be displayed in the UI.
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_fields-renamer_process.png'    # Icon URL that will be displayed in the UI.
