--- a/Module.yaml
+++ b/Module.yaml
@@ -7,10 +7,10 @@ categories:                             # Array of category that will be used to
   - 'Policies'
 type: 'Processing'      # Module type (Input, Processing, Output) that will be used to group the module in the UI.
 image:
-  name: 'weevenetwork/fields-renamer'     # Image name from the docker registry.
+  name: 'beetaone/fields-renamer'     # Image name from the docker registry.
   tag: 'v1.0.1'                               # Image tag from the docker registry.
-  homepage: 'https://hub.docker.com/r/weevenetwork/fields-renamer'      # Image homepage from the docker registry.
-repository: 'https://github.com/weeve-modules/fields-renamer'     # Repository URL to source code.
+  homepage: 'https://hub.docker.com/r/beetaone/fields-renamer'      # Image homepage from the docker registry.
+repository: 'https://github.com/beetaone/module-fields-renamer'     # Repository URL to source code.
 envs:                                   # Array of environment variables that will be used to configure the module. Also used to show related fields on the UI.
   - name: Rename Fields                   # name of the field to be displayed on the UI.
     key: RENAME_FIELDS                # key to set in the environment variables.
@@ -30,4 +30,4 @@ tags:                                   # Array of tags.
   - 'Processing'
   - 'Fields-Renamer'
   - 'Rename'
-icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_fields-renamer_process.png'    # Icon URL that will be displayed in the UI.
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_fields-renamer_process.png'    # Icon URL that will be displayed in the UI.he UI.
